samples/_failures_safe/1761272811_a93b85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_326118ba.c: In function ‘main’:
./samples/SAFE/__tmp_326118ba.c:185:12: error: missing terminating " character
  185 |     printf("Available events: start, data, process
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_326118ba.c:185:5: error: expected expression at end of input
  185 |     printf("Available events: start, data, process
      |     ^~~~~~
./samples/SAFE/__tmp_326118ba.c:185:5: error: expected declaration or statement at end of input
